# MacroPowerToys

./: AppendListsItems.h  AreArgsEmpty.h  ArgsCount.h  ArgsOpt.h  CMakeLists.txt  ConcatListsItems.h  CountTo.h  GetLastArg.h  InternalCounter.h  IsEmptyArgs.h  Jenkinsfile  MacroPowerToy.h  MacroPowerToys.h  Miscellaneous.h  Overload.h  PersistentCounter.h  PrefixSuffixArgs.h  PrependAppendArgs.h  README.md  RemoveParenthesisInList.h  RunAllExamples.bat  RunAllExamples.sh  SplitList.h  TestMPT.c  TestMPT.cpp
CI/: MacroPowerToyArtifacts.gocd.yaml  MacroPowerToyArtifactsManual.gocd.yaml  MacroPowerToyMain.gocd.yaml  MacroPowerToyMainManual.gocd.yaml  MacroPowerToyMainTrigger.gocd.yaml  MacroPowerToyPR_Trigger.gocd.yaml
Examples/: AppendListsItems.cpp  AreArgsEmpty.c  AreArgsEmpty.cpp  ArgsCount.c  ArgsOpt.c  ConcatListsItems.c  ConcatListsItems.cpp  CountTo.c  GetLastArg.cpp  Miscellaneous.c  Miscellaneous.cpp  Overload.c  Overload.cpp  PersistentCounter.c  PrefixSuffixArgs.c  PrependAppendArgs.c  PrependAppendArgs.cpp  RemoveParenthesisInList.c  SplitList.c  SplitList.cpp
Generators/: GenerateAppendListsItems.cpp  GenerateConcatListsItems.cpp  GenerateCountTo.cpp  GenerateGetLastArg.cpp  GeneratePrefixSuffixArgs.cpp  GeneratePrependAppendArgs.cpp  GenerateRemoveParenthesis.cpp  GenerateSplitList.cpp
